src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_capture_compact.snap
---
source: src/ui/mod.rs
expression: "render_app(&app, &mut state, &connections, None, 80, 24)"
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────────────────━━━━━━━━━━─────────────────────────────────
Applications   Capture                                                          
───────────────━━━━━━━──────────────────────────────────────────────────────────
▎ Capture ──────────────────────────────────────────────────────────────────────
Coverage · last 60s                                                             
Basis: eth0                                                                     
TX 73.1%    ░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓███████████▎·················  
Captured: 5.85 MB                                                               
Interface: 8.00 MB                                                              
RX 91.8%    ░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓██████████████▋·····  
Captured: 3.67 MB                                                               
Interface: 4.00 MB                                                              
──────────────────────────────────────────────────────────────────────────────  
Attribution · retained traffic                                                  
TX 100.0% mapped                                                                
Mapped: 5.85 MB                                                                 
Unknown: 0 B                                                                    
Retained: 5.85 MB                                                               
RX 100.0% mapped                                                                
Mapped: 3.67 MB                                                                 
Unknown: 0 B                                                                    
Retained: 3.67 MB                                                               
 v/V section  esc back                                           h help  q quit
