src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_interface_details.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Help                                                                    ● eth0
─────────────────────────────────────━━━━━━━━━━─────────────────────────────────────────────────────────────────────────────────────────────
▎ Interface Statistics                                                                                                                      
Interface           RX Rate      TX Rate RX Packets TX Packets    RX Err    TX Err    RX Drop    TX Drop Collisions                         
eth0            512.00 KB/s  128.00 KB/s    1200000     800000         0         0         12          0          0                         
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 j/k scroll  i process activity  esc back                                                                                    h help  q quit
