src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_process_details.snap
---
source: src/ui/mod.rs
expression: "render_app(&app, &mut state, &connections, None, 80, 24)"
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────────────────━━━━━━━━━━─────────────────────────────────
Applications   Capture                                                          
━━━━━━━━━━━━────────────────────────────────────────────────────────────────────
▎ Process · firefox (2001) ─────────────────────────────────────────────────────
Process: firefox                                                               ▐
PID: 2001                                                                      ▐
Interface basis: eth0                                                          ▐
Attribution: Mapped                                                            ▐
Connections: 1 active / 1 retained                                             ▐
Remote peers: 1                                                                ▐
────────────────────────────────────────────────────────────────────────────── ▐
Egress (TX)                                                                    ▐
Current rate: 2.38 MiB/s                                                       ▐
Peak rate: 2.38 MiB/s                                                          ▐
Last 60s: 4.78 MiB                                                             ▐
Share of captured 60s: 81.7%                                                   ▐
Retained: 4.78 MiB                                                              
Share of retained: 81.7%                                                        
Share of interface 60s: 59.8%                                                   
Top remote peer: 140.82.121.4:443                                               
──────────────────────────────────────────────────────────────────────────────  
Ingress (RX)                                                                    
 v/V section  j/k scroll  o connections  esc processes           h help  q quit
