src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_short_terminal_keeps_processes_and_coverage.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────────────────━━━━━━━━━━─────────────────────────────────
Applications   Capture                                                          
━━━━━━━━━━━━────────────────────────────────────────────────────────────────────
TX    2.88 MiB/s   RX    1.70 MiB/s                                             
Coverage 60s: TX 73.1%  RX 91.8%                                                
▎ Applications · TX · Retained TX ↓ ───────────────────────────────────── 1-3/4 
  Application                                  TX/s   60s %   Retained   Conns  
▌ firefox                                     2.4Mi   81.7%   4.78 MiB     1/1 ▐
  sshd                                        488Ki   17.7%   1.04 MiB     1/1 ▐
  systemd-resolved                             16Ki    0.5%  32.42 KiB     1/1  
 v/V section  j/k select  enter details  d tx/rx  s sort         h help  q quit
