src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_tab_empty_terminal.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────────────────━━━━━━━━━━─────────────────────────────────
Applications   Capture                                                          
━━━━━━━━━━━━────────────────────────────────────────────────────────────────────
TX       -        RX       -                                                    
Coverage 60s: TX n/a  RX n/a                                                    
▎ Applications · TX · Retained TX ↓ ─────────────────────────────────────── 0/0 
Waiting for application traffic...                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section  d tx/rx  s sort  S order  esc back                 h help  q quit
