src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_tab_process_egress.snap
---
source: src/ui/mod.rs
expression: "render_activity(&app, ActivityDirection::Egress)"
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                              ● eth0
─────────────────────────────────────━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────────
TX    2.88 MB/s   RX    1.70 MB/s                                                                                                                     
▎ Applications · TX · Retained TX ↓ ───────────────────────────────────────────────────────────────────── 1-4/4   ▎ Capture ──────────────────────────
  Application                              TX/s   60s %   Retained   Conns Share · 60s  Top remote peer           Coverage · last 60s                 
▌ firefox                                  2.4M   81.7%    4.78 MB     1/1 ░░░▒▒▓▓▓█▊·· 140.82.121.4:443          Basis: eth0                         
  sshd                                     488K   17.7%    1.04 MB     1/1 ██▏········· 10.0.0.5:51022            TX 73.1%    ░░░░░▒▒▒▒▓▓▓▓███▏·····  
  systemd-resolved                          16K    0.5%   32.42 KB     1/1 ▏··········· 1.1.1.1:53                Captured: 5.85 MB                   
  curl                                        -    0.0%        0 B     1/1 ············ 151.101.1.195:443         Interface: 8.00 MB                  
                                                                                                                  RX 91.8%    ░░░░░░▒▒▒▒▒▓▓▓▓▓████▎·  
                                                                                                                  Captured: 3.67 MB                   
                                                                                                                  Interface: 4.00 MB                  
                                                                                                                  ──────────────────────────────────  
                                                                                                                  Attribution · retained traffic      
                                                                                                                  TX 100.0% mapped                    
                                                                                                                  Mapped: 5.85 MB                     
                                                                                                                  Unknown: 0 B                        
                                                                                                                  Retained: 5.85 MB                   
                                                                                                                  RX 100.0% mapped                    
                                                                                                                  Mapped: 3.67 MB                     
                                                                                                                  Unknown: 0 B                        
                                                                                                                  Retained: 3.67 MB                   
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
▎ Application share · TX · 60s ───────────────────────────────────────────  ▎ Interfaces · TX share 60s · live rates ─────────────────────────────────
  firefox                  ░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███████▉·······   81.7%    eth0         ░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓██████ TX    4.00 MB/s RX    2.00 MB/s
  sshd                     ░░▒▒▓▓▉································   17.7%                                                                            
  systemd-resolved         ▎······································    0.5%                                                                            
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
 j/k select  enter details  d tx/rx  s sort  S order  o connections  esc back                                                          h help  q quit
