src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__activity_tab_process_ingress.snap
---
source: src/ui/mod.rs
expression: "render_activity(&app, ActivityDirection::Ingress)"
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                              ● eth0
─────────────────────────────────────━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────────
TX    2.88 MiB/s   RX    1.70 MiB/s                                                                                                                   
▎ Applications · RX · Retained RX ↓ ───────────────────────────────────────────────────────────────────── 1-4/4   ▎ Capture ──────────────────────────
  Application                              RX/s   60s %   Retained   Conns Share · 60s  Top remote peer           Coverage · last 60s                 
▌ firefox                                 1.4Mi   84.1%   3.09 MiB     1/1 ░░░▒▒▒▓▓▓█▏· 140.82.121.4:443          Basis: eth0                         
  sshd                                    244Ki   14.1% 529.30 KiB     1/1 █▊·········· 10.0.0.5:51022            TX 73.1%    ░░░░░▒▒▒▒▓▓▓▓███▏·····  
  systemd-resolved                         31Ki    1.8%  65.82 KiB     1/1 ▎··········· 1.1.1.1:53                Captured: 5.85 MiB                  
  curl                                        -    0.0%   1.50 KiB     1/1 ············ 151.101.1.195:443         Interface: 8.00 MiB                 
                                                                                                                  RX 91.8%    ░░░░░░▒▒▒▒▒▓▓▓▓▓████▎·  
                                                                                                                  Captured: 3.67 MiB                  
                                                                                                                  Interface: 4.00 MiB                 
                                                                                                                  ──────────────────────────────────  
                                                                                                                  Attribution · retained traffic      
                                                                                                                  TX 100.0% mapped                    
                                                                                                                  Mapped: 5.85 MiB                    
                                                                                                                  Unknown: 0 B                        
                                                                                                                  Retained: 5.85 MiB                  
                                                                                                                  RX 100.0% mapped                    
                                                                                                                  Mapped: 3.67 MiB                    
                                                                                                                  Unknown: 0 B                        
                                                                                                                  Retained: 3.67 MiB                  
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
▎ Application share · RX · 60s ───────────────────────────────────────────  ▎ Interfaces · RX share 60s · live rates ─────────────────────────────────
  firefox                  ░░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███████▉······   84.1%    eth0         ░░░░░░░▒▒▒▒▒▒▓▓▓▓▓▓██████ TX    4.00 MiB/s RX    2.00 MiB/s
  sshd                     ░░▒▓▓▌·································   14.1%                                                                            
  systemd-resolved         ▋······································    1.8%                                                                            
  curl                     ·······································    0.0%                                                                            
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
                                                                                                                                                      
 j/k select  enter details  d tx/rx  s sort  S order  o connections  esc back                                                          h help  q quit
